[tool.poetry]
name = "cloudssh"
version = "0.1.0"
description = ""
authors = ["swbsf <s.wallimann@quortex.io>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "1.15.5"
click = "7.1.2"
tabulate = "0.8.7"
pydantic = "1.6.1"
loguru = "0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
